# UCLA

./: .gitignore  LICENSE  README.md
cpp/UCLA/: CMakeLists.txt  UCLA.sdf  UCLA.sln
cpp/UCLA/UCLA_Client/: CMakeLists.txt  ReadMe.txt  UCLA_Client.cpp  UCLA_Client.vcxproj  UCLA_Client.vcxproj.filters  config.json  stdafx.cpp  stdafx.h
cpp/UCLA/UCLA_Receiver/: UCLA_Receiver.cpp  UCLA_Receiver.vcxproj  UCLA_Receiver.vcxproj.filters  stdafx.cpp
cpp/UCLA/UCLA_Sender/: CMakeLists.txt  UCLA_Sender.vcxproj  UCLA_Sender.vcxproj.filters  UCLA_Sendercpp  stdafx.h  targetver.h
cpp/UCLA/UCLA_Server/: CMakeLists.txt  ReadMe.txt  UCLA_Server.cpp  UCLA_Server.vcxproj  UCLA_Server.vcxproj.filters  stdafx.h  targetver.h
cpp/UCLA/cmake/Modules/: FindJansson.cmake  FindLibXS.cmake
cpp/UCLA/libUCLA/: CMakeLists.txt  ReadMe.txt  UClient.cpp  UClient.h  UConfig.cpp  UConfig.h  UException.h  ULoader_JSON.cpp  ULoader_JSON.h  UReceiver.cpp  UReceiver.h  USender.cpp  USender.h  UServer.cpp  UServer.h  config.h  libUCLA.vcxproj  libUCLA.vcxproj.filters  m_safestring.cpp  m_safestring.h
cs/UCLA/: UCLA.sln
cs/UCLA/UCLA_Client/: Client.cs  UCLA_Client.csproj
cs/UCLA/UCLA_Receiver/: Receiver.cs  UCLA_Receiver.csproj
cs/UCLA/UCLA_Sender/: Sender.cs  UCLA_Sender.csproj
cs/UCLA/UCLA_Server/: Server.cs  UCLA_Server.csproj
cs/UCLA/libUCLA/: UClient.cs  UConfig.cs  UException.cs  ULoader_JSON.cs  USender.cs  (+3 more)
doc/: Config.md  Intro.md
java/UCLA_Client/: build.xml
java/UCLA_Receiver/: build.xml
java/UCLA_Sender/: build.xml
java/UCLA_Server/: build.xml
java/libUCLA/: build.xml
(+38 files in other folders)
